@@ -1,3 +1,8 @@
+2009-06-04  Manuel Cerón  <ceronman@gmail.com>
+
+	* gui.stetic:
+	* MainWindow.cs: Added Undo and Redo actions
+
 2009-05-28  Manuel Cerón  <ceronman@gmail.com>
 
 	* gui.stetic:
