@@ -1,5 +1,9 @@
 2009-06-04  Manuel Cerón  <ceronman@gmail.com>
 
+	* SteticComponent.cs: Added Undo and Redo Methods
+
+2009-06-04  Manuel Cerón  <ceronman@gmail.com>
+
 	* MonoHotDraw.csproj: DragTracker renamed to DragTool
 
 2009-06-03  Manuel Cerón  <ceronman@gmail.com>
