@@ -1,3 +1,7 @@
+2009-06-04  Manuel Cerón  <ceronman@gmail.com>
+
+	* MainWindow.cs: Added Undo and Redo actions
+
 2009-05-28  Manuel Cerón  <ceronman@gmail.com>
 
 	* ClassFigure.cs:
